Prepare for OpenSearch Feature.